# ChaukaBartan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5930e0d654eb_initial_schema.py  a1b2c3d4e5f6_add_tags_expected_time_todo_status.py
app/: main.py
app/api/v1/: dashboard.py  goals.py  habits.py  plans.py  router.py  tasks.py
app/core/: auth.py  config.py  database.py
app/models/: __init__.py  enums.py  goal.py  habit.py  plan.py  task.py
app/modules/plan/: builder.py
app/schemas/: dashboard.py  goal.py  habit.py  plan.py  task.py
frontend/: Dockerfile  middleware.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/completed/: page.tsx
frontend/app/goals/: page.tsx
frontend/app/habits/: page.tsx
frontend/app/login/: page.tsx
frontend/app/plans/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: Badge.tsx  LogoutButton.tsx
frontend/lib/: api.ts
infrastructure/scripts/: build-and-push.sh
infrastructure/terraform/environments/dev/: main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/terraform/modules/alb/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/dns/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/ecr/: main.tf
infrastructure/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/vpc/: main.tf  variables.tf
(+1 files in other folders)
